# aoc25

./: Cargo.toml  README.md
src/: input.rs
